--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -38,6 +38,7 @@
         android:textColor="#1E1E1E"
         android:textSize="24sp"
         android:fontFamily="serif"
+        android:textStyle="bold"
         android:layout_marginTop="18dp"
         app:layout_constraintTop_toBottomOf="@id/topLine"
         app:layout_constraintStart_toStartOf="parent"/>
@@ -60,6 +61,7 @@
             android:layout_height="36dp"
             android:layout_weight="1"
             android:text="Diary"
+            android:textStyle="bold"
             android:textAllCaps="false"
             android:textColor="#1E1E1E"
             android:background="@drawable/bg_tab_pill_selected_mh"
@@ -73,6 +75,7 @@
             android:layout_height="36dp"
             android:layout_weight="1"
             android:text="Mood"
+            android:textStyle="bold"
             android:textAllCaps="false"
             android:textColor="#1E1E1E"
             android:background="@drawable/bg_tab_pill_unselected_mh"
@@ -86,6 +89,7 @@
             android:layout_height="36dp"
             android:layout_weight="1"
             android:text="Stress"
+            android:textStyle="bold"
             android:textAllCaps="false"
             android:textColor="#1E1E1E"
             android:background="@drawable/bg_tab_pill_unselected_mh"
